--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/sun.png" />
-  <link rel="stylesheet" href="../src/bootstrap-social.css">
+  <link rel="stylesheet" href="./bootstrap-social.css">
+  <link rel="stylesheet" href="./App.css">
 
   <!-- CSS bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
